--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,12 @@
 /Eve/build/
 /Eve/dist/
 /Eve/nbproject/private/
+/examTest/TestExam/nbproject/private/
+/Chapter20/Chapter20/nbproject/private/
+/Chapter24/Chapter24/nbproject/private/
+/Chapter18/Chapter18/build/
+/Chapter30/nbproject/private/
+/Chapter30/build/
+/Chapter22/nbproject/private/
+/Chapter22/dist/
+/Chapter22/build/
